2012-03-14  Stefano Perticaroli and Francesco Lannutti
 * src/spicelib/analysis/dcpss.c
  The PSS Analysis Algorithm has been entirely reviewed and now
   it works very well. Some additional files have been modified,
   like configure.ac, plotting strategies and so on...

2012-03-12  Francesco Lannutti
 * src/maths/UMFPACK
  Added UMFPACK as new experimental linear solver
   Some files modified due to UMFPACK integration
   Some bugs and minor/cosmetic fixed
   TODO: Correct cktacct.c to let it print fill-ins
         properly using UMFPACK or SuperLU

2012-02-23  Francesco Lannutti
 * src/maths/SuperLU
  Added SuperLU as new experimental linear solver
   Several files added and/or modified

2012-02-22  Francesco Lannutti
 * src/frontend/outitf.c
 * src/frontend/typesdef.c
 * src/spicelib/analysis/dcpss.c
  Corrected the plot type in the PSS Frequency Domain
   and the plot name in the PSS Analysis

 * src/Makefile.am
 * src/maths/KLU/Makefile.am
 * src/maths/KLU/klusmp.c (new file)
 * src/maths/sparse/Makefile.am
 * src/maths/sparse/spsmp.c
  SMP to solver interface separated:
   spsmp.c is the original interface between SMP and Sparse
   klusmp.c is the new one between SMP and KLU

 * src/spicelib/analysis/cktsens.c
  Corrected a bug during the Sensitivity Analysis
   when NG-Spice is compiled with KLU enabled
 * src/spicelib/parser/inp2dot.c
  Corrected a minus-cosmetic bug in the name of
   the PSS Analysis

2012-02-21  Francesco Lannutti
  Almost all devices now supports KLU

2012-02-16  Francesco Lannutti
 * src/spicelib/analysis/cktacct.c
  corrected a bug during the calculation of fill-ins for KLU

2012-02-09  Francesco Lannutti
  a lot of changed files; now I don't remember :(

2012-02-04  Robert Larice
 * src/maths/sparse/spoutput.c :
  drop some disabled experimental code in spMatrix_CSC()

2012-02-04  Robert Larice
 * configure.ac ,
 * src/include/ngspice/cktdefs.h ,
 * src/include/ngspice/smpdefs.h ,
 * src/maths/ni/niaciter.c ,