@@ -127,6 +127,46 @@ include_HEADERS = \
 	FastNorm3.h	\
 	fftext.h	\
 	wallace.h	\
-	wstdio.h
+	wstdio.h	\
+	slu_Cnames.h	\
+	slu_dcomplex.h	\
+	slu_ddefs.h	\
+	slu_util.h	\
+	slu_zdefs.h	\
+	superlu_enum_consts.h		\
+	supermatrix.h			\
+	umfpack_col_to_triplet.h	\
+	umfpack_defaults.h		\
+	umfpack_free_numeric.h		\
+	umfpack_free_symbolic.h		\
+	umfpack_get_determinant.h	\
+	umfpack_get_lunz.h		\
+	umfpack_get_numeric.h		\
+	umfpack_get_symbolic.h		\
+	umfpack_global.h		\
+	umfpack.h			\
+	umfpack_load_numeric.h		\
+	umfpack_load_symbolic.h		\
+	umfpack_numeric.h		\
+	umfpack_qsymbolic.h		\
+	umfpack_report_control.h	\
+	umfpack_report_info.h		\
+	umfpack_report_matrix.h		\
+	umfpack_report_numeric.h	\
+	umfpack_report_perm.h		\
+	umfpack_report_status.h		\
+	umfpack_report_symbolic.h	\
+	umfpack_report_triplet.h	\
+	umfpack_report_vector.h		\
+	umfpack_save_numeric.h		\
+	umfpack_save_symbolic.h		\
+	umfpack_scale.h			\
+	umfpack_solve.h			\
+	umfpack_symbolic.h		\
+	umfpack_tictoc.h		\
+	umfpack_timer.h			\
+	umfpack_transpose.h		\
+	umfpack_triplet_to_col.h	\
+	umfpack_wsolve.h
 
 MAINTAINERCLEANFILES = Makefile.in
